today's final version

--- a/src/style.scss
+++ b/src/style.scss
@@ -24,9 +24,9 @@ $color10: #0C0F0A; //lines
 #skip {
   position: fixed;
   top: 10px;
-  left: 300px;
+  right: 10px;
   font-family: 'Super Mario';
-  font-size: 20px;
+  font-size: 24px;
   border: 2px solid $color10;
   background-color: $color09;
   color: $color01;
