--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,18 +1,18 @@
-$player1: #ef476f;
-$player2: #ffd166;
-$player3: #06d6a0;
-$player4: #2b59c3;
-$player5: #593837;
-$player6: #320E3B;
+$player1: #f3722c;
+$player2: #F9C74F;
+$player3: #90BE6D;
+$player4: #43AA8B;
+$player5: #26547C;
+$player6: #a04d5c;
 
-$background: #fffcf9;
-$accent: #ff456f;
-$selected: #0C0F0A;
-$disabled: #2d3047;
-$lines: #0c0f0a;
-$text: #0c0f0a;
-$game-text: #fffcf9;
-$shadow: #2d3047;
+$background: #577590;
+$accent: #0f121a;
+$selected: #212738;
+$disabled: #577590;
+$lines: #212738;
+$text: #ece6d5;
+$game-text: #ece6d5;
+$shadow: #2e2e2e;
 
 $font-family: 'Rexlia';
 $font-size: 14px;
